feat: update heading

--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -7,7 +7,7 @@
     "terms": "Términos de Servicio"
   },
   "hero": {
-    "title": "Generador de Transcripciones de YouTube Gratuito",
+    "title": "Transcribir Videos de YouTube a Texto — Gratis y al Instante",
     "subtitle": "Usa nuestro extractor de transcripciones de YouTube gratuito y convierte cualquier video de YouTube a texto con un solo clic",
     "trusted": "Confiado por más de 535 mil usuarios en todo el mundo",
     "noSignup": "Sin registro y uso ilimitado gratuito",
