--- a/src/i18n/locales/pt/translation.json
+++ b/src/i18n/locales/pt/translation.json
@@ -7,7 +7,7 @@
     "terms": "Termos de Serviço"
   },
   "hero": {
-    "title": "Gerador de Transcrição do YouTube Gratuito",
+    "title": "Transcrever Vídeo do YouTube para Texto — Grátis e Instantâneo",
     "subtitle": "Use nosso extrator de transcrição do YouTube gratuito e converta qualquer vídeo do YouTube em texto com um clique",
     "trusted": "Confiado por mais de 535 mil usuários em todo o mundo",
     "noSignup": "Sem cadastro e uso ilimitado gratuito",
